tests/valid/04_arithmetic_inside_comparison.brl
valid := (score + bonus) >= 60 and attempts < 3;
print valid;
