tests/invalid/04_unclosed_parenthesis.brl
valid := (score + bonus >= 60;
print valid;
